--- a/templates/about.html
+++ b/templates/about.html
@@ -33,9 +33,9 @@
         <a href="{{ url_for('sold') }}" style="text-decoration: none; color: white; padding: 10px 20px; background-color: #333; border-radius: 5px;">Exhibitions</a>
     </div>
     <div style="text-align: center; font-size: 1em; margin-top: 20px;">
-        <h>Get to view Keith Zenda Gallery</h6>
+        <h>Get to see Keith Zenda Art</h6>
         <div style="display: flex; justify-content: center; margin-top: 20px;">
-            <a href="https://www.artsy.net/artist/keith-zenda" style="text-decoration: none; color: white; padding: 10px 20px; background-color: #333; border-radius: 5px;">Keith Zenda Gallery</a>
+            <a href="https://www.artsy.net/artist/keith-zenda" style="text-decoration: none; color: white; padding: 10px 20px; background-color: #333; border-radius: 5px;">KeithZendaArt on Artsy</a>
     </div>
 </div>
 </div>
@@ -61,7 +61,7 @@
         </div>
         <div style="text-align: center; margin-top: 20px;">
             <p style="color: black; font-family: 'Lato', sans-serif; font-size: 16px;">Phone: +263 77 633 0869</p>
-            <p style="color: black; font-family: 'Lato', sans-serif; font-size: 16px;">Email: keithzendart@gmail.com</p>
+            <p style="color: black; font-family: 'Lato', sans-serif; font-size: 16px;">Email: swisszimkeith@gmail.com</p>
         </div>
     </div>
 </section>
