--- a/templates/base.html
+++ b/templates/base.html
@@ -12,13 +12,15 @@
             <h1><a href="/" style="font-weight: bolder; font-size: 1.5em; text-decoration: none;">Home</a></h1>
             <h2><a href="/about" style="font-weight: bolder; font-size: 1.5em; text-decoration: none;">About</a></h2>
             <div class="dropdown" style="position: relative;">
-                <h2><a href="#" onclick="toggleDropdown(event)" style="font-weight: bolder; font-size: 1.5em; text-decoration: none;">Gallery</a></h2>
-                <div class="dropdown-content" style="display: none; position: absolute; background-color: white; border: 1px solid #ccc; padding: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); width: 200px;">
-                <a href="/zendaism_art" style="display: block; padding: 5px 10px; text-decoration: none; color: black; font-weight: bold; font-size: 1.2em;">Zendaism Art</a>
-                <a href="/category" style="display: block; padding: 5px 10px; text-decoration: none; color: black; font-weight: bold; font-size: 1.2em;">Categories</a>
-                <a href="/sold" style="display: block; padding: 5px 10px; text-decoration: none; color: black; font-weight: bold; font-size: 1.2em;">Exhibitions</a>             
-               
-            </div>
+                <h2><a href="#" onclick="toggleDropdown(event)" style="font-weight: bolder; font-size: 1.5em; text-decoration: none;">Categories</a></h2>
+                <div class="dropdown-content" style="display: none; position: absolute; background-color: white; border: 1px solid #ccc; padding: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); width: 150px;">
+                <a href="/zendaism_art" style="display: block; padding: 5px; text-decoration: none; color: black; font-weight: bold; font-size: 1em;">Zendaism Art</a>
+                <a href="/scrap" style="display: block; padding: 5px; text-decoration: none; color: black; font-weight: bold; font-size: 1em;">Scrap Metal Art</a>
+                <a href="/egg" style="display: block; padding: 5px; text-decoration: none; color: black; font-weight: bold; font-size: 1em;">The Egg series</a>
+                <a href="/social" style="display: block; padding: 5px; text-decoration: none; color: black; font-weight: bold; font-size: 1em;">Social Lifestyle Art</a>
+                <a href="/potraits" style="display: block; padding: 5px; text-decoration: none; color: black; font-weight: bold; font-size: 1em;">Potraits</a>
+                <a href="/sold" style="display: block; padding: 5px; text-decoration: none; color: black; font-weight: bold; font-size: 1em;">Exhibitions</a>             
+                </div>
             </div>
             <h2><a href="/commissions" style="font-weight: bolder; font-size: 1.5em; text-decoration: none;">Commissions</a></h2>
             </div>
