--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <p>Welcome to Keith Zenda Portfolio</p>
 </div>
 
-<section class="preview-gallery" style="text-align: center; margin-top: 50px;">
+<section class="preview-gallery" style="text-align: center; margin-top: 70px;">
     <div class="gallery" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px;">
 
         <section style="text-align: center; margin-top: 50px;">
@@ -127,6 +127,12 @@
         <div style="width: 45%; text-align: left; font-family: 'Georgia', serif; font-size: 18px; color: #ffffff; line-height: 1.8;">
             <h2>Zenda Art</h2>
             <p>Keith Zenda is an artist who celebrates African culture through vibrant portraits. Blending traditional and contemporary styles, his work captures the essence of identity and resilience, inviting viewers to explore the rich stories behind each piece.</p>
+            <div style="text-align: center; font-size: 1em; margin-top: 20px;">
+                <h>For prices, click below</h6>
+                <div style="display: flex; justify-content: center; margin-top: 20px;">
+                    <a href="https://www.artsy.net/artist/keith-zenda" style="text-decoration: none; color: white; padding: 10px 20px; background-color: #333; border-radius: 5px;">KeithZendaArt on Artsy</a>
+            </div>
+        </div>
         </div>
 
         <!-- Right Section -->
@@ -252,8 +258,4 @@
     </form>
 </div>
 {% endblock %}
-
-
-
-
 
