--- a/templates/sold.html
+++ b/templates/sold.html
@@ -55,6 +55,11 @@
 <!-- New Bottom Section -->
 <section style="background-color: black; color: white; padding: 2em; text-align: center; min-height: 40vh; display: flex; flex-direction: column; justify-content: center;">
     <h2>Zenda Art</h2>
+    <div style="text-align: center; font-size: 1em; margin-top: 5px;">
+        <h5>Get to see Keith Zenda Art</h5>
+        <div style="display: flex; justify-content: center; margin-top: 20px;">
+            <a href="https://www.artsy.net/artist/keith-zenda" style="text-decoration: none; color: white; padding: 10px 20px; background-color: #333; border-radius: 5px;">KeithZendaArt on Artsy</a>
+    </div>
     <div style="background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
         <h2 style="color: black; text-decoration: underline; font-family: 'Lato', sans-serif;">Socials</h2>
         <p style="color: black; font-family: 'Lato', sans-serif;">Click any of the links below, get to see Keith Zenda Art.</p>
@@ -72,7 +77,7 @@
         <div style="text-align: center; margin-top: 20px;">
             <h2 style="color: black; text-decoration: underline; font-family: 'Lato', sans-serif;">Contact</h2>
             <p style="color: black; font-family: 'Lato', sans-serif; font-size: 16px;">Phone: +263 77 633 0869</p>
-            <p style="color: black; font-family: 'Lato', sans-serif; font-size: 16px;">Email: keithzendart@gmail.com</p>
+            <p style="color: black; font-family: 'Lato', sans-serif; font-size: 16px;">Email: swisszimkeith@gmail.com</p>
         </div>
     </div>
     <a href="https://wa.me/message/EQXJKZARKXVD1" style="position: fixed; bottom: 20px; right: 20px; display: flex; align-items: center; text-decoration: none; color: #ffffff; background-color: #25D366; padding: 10px; border-radius: 50px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
