--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 <!-- Add this section below the navigation tabs -->
 <div style="text-align: center; margin-top: 20px; font-family: 'Georgia', serif; font-size: 24px; color: #333; font-weight: bold;">
-    <p>Welcome to Keith Zenda Portfolio</p>
+    <p>Welcome to Keith Zenda Art Portfolio</p>
 </div>
 
 <section class="preview-gallery" style="text-align: center; margin-top: 70px;">
