--- a/templates/sold.html
+++ b/templates/sold.html
@@ -10,6 +10,22 @@
 <body>
     <h1 style="text-align: center;">Exhibition</h1>
     <h3 style="text-align: center;">Exhibition Theme: Maonero angu</h3>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0022.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0033.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0051.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0047.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
     <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center;">
         <div style="width: 45%; margin-bottom: 20px;">
             <img src="{{ url_for('static', filename='uploads/IMG-20250419-WA0056.jpg') }}" alt="Art 1" style="width: 100%;">
@@ -17,6 +33,86 @@
         <div style="width: 45%; margin-bottom: 20px;">
             <img src="{{ url_for('static', filename='uploads/IMG-20250419-WA0062.jpg') }}" alt="Art 2" style="width: 100%;">
     </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0050.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0039.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250419-WA0064.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250419-WA0065.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0036.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0032.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0023.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0019.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0004.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0002.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0041.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0042.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0044.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0045.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0048.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0049.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0052.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0053.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
+    </div>
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250426-WA0006.jpg') }}" alt="Art 1" style="width: 100%;">
+        </div>
+        <div style="width: 45%; margin-bottom: 20px;">
+            <img src="{{ url_for('static', filename='uploads/IMG-20250426-WA0008.jpg') }}" alt="Art 2" style="width: 100%;">
+        </div>
     </div>
 <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
     <div style="width: 45%; margin-bottom: 20px;">
