--- a/templates/social.html
+++ b/templates/social.html
@@ -57,20 +57,17 @@ style="background-color: #f0f0f0; border: none; padding: 10px; cursor: pointer; 
         <p>Medium: Mixed media on canvas</p>
         <p>Size: 140x120cm</p>
         <p>Year: 2025</p>
-       <a href="https://wa.me/263776330869?text=I%20am%20interested%20in%20buying%20a%20print%20of%20Golden girl.%20Can%20we%20negotiate?" style="text-decoration: none;">
+        <p style="display: flex; align-items: center; justify-content: space-between;">
+            Sold
+            <span style="width: 20px; height: 20px; background-color: red; border-radius: 50%; display: inline-block;"></span>
+        </p>
+    </div>
+    <div style="margin-top: 10px;">
+        <a href="https://wa.me/263776330869?text=I%20am%20interested%20in%20buying%20a%20print%20of%20Golden girl.%20Can%20we%20negotiate?" style="text-decoration: none;">
             <button style="background-color: #007BFF; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
                 Buy Print
             </button>
             </a>
-    </div>
-    <div style="margin-top: 10px;">
-        <button 
-onclick="toggleCart(this, this.dataset.title, )" 
-data-title="Golden girl" 
-style="background-color: #f0f0f0; border: none; padding: 10px; cursor: pointer; display: flex; align-items: center;">
-            <span>Add to Cart</span>
-            <span style="margin-left: 10px; color: green; display: none;">✔</span>
-        </button>
         </div>
 </div>
 </div>
