--- a/templates/sold.html
+++ b/templates/sold.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align: center;">Exhibition</h1>
     <h3 style="text-align: center;">Exhibition Theme: Maonero angu</h3>
-    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center;">
         <div style="width: 45%; margin-bottom: 20px;">
             <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0022.jpg') }}" alt="Art 1" style="width: 100%;">
         </div>
