--- a/templates/sold.html
+++ b/templates/sold.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align: center;">Exhibition</h1>
     <h3 style="text-align: center;">Exhibition Theme: Maonero angu</h3>
-    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center;">
+    <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
         <div style="width: 45%; margin-bottom: 20px;">
             <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0022.jpg') }}" alt="Art 1" style="width: 100%;">
         </div>
@@ -18,6 +18,7 @@
             <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0033.jpg') }}" alt="Art 2" style="width: 100%;">
         </div>
     </div>
+</div>
     <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
         <div style="width: 45%; margin-bottom: 20px;">
             <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0051.jpg') }}" alt="Art 1" style="width: 100%;">
@@ -26,6 +27,7 @@
             <img src="{{ url_for('static', filename='uploads/IMG-20250425-WA0047.jpg') }}" alt="Art 2" style="width: 100%;">
         </div>
     </div>
+</div>
     <div class="gallery" style="display: flex; justify-content: center; gap: 20px; align-items: center;">
         <div style="width: 45%; margin-bottom: 20px;">
             <img src="{{ url_for('static', filename='uploads/IMG-20250419-WA0056.jpg') }}" alt="Art 1" style="width: 100%;">
