--- a/templates/zendaism_art.html
+++ b/templates/zendaism_art.html
@@ -521,17 +521,17 @@
 </body>
 </html>
 <!-- New Bottom Section -->
-<section style="background-color: black; color: white; padding: 2em; text-align: center; min-height: 40vh; display: flex; flex-direction: column; justify-content: center; margin-top: 100px;">
-        <div style="text-align: center; font-size: 1em; margin-bottom: 20px;">
-            <h5>Feel free to purchase any paintings you like!</h5>
-            <div style="text-align: center; font-size: 1em; margin-top: 20px;">
-                <h>For prices, click below</h6>
-                <div style="display: flex; justify-content: center; margin-top: 20px;">
-                    <a href="https://www.artsy.net/artist/keith-zenda" style="text-decoration: none; color: white; padding: 10px 20px; background-color: #333; border-radius: 5px;">KeithZendaArt on Artsy</a>
+<section style="background-color: black; color: white; padding: 2em; text-align: center; min-height: 40vh; display: flex; flex-direction: column; justify-content: center; margin-top: 100px; width: 100%; box-sizing: border-box;">
+    <div style="text-align: center; font-size: 1em; margin-bottom: 20px;">
+        <h5>Feel free to purchase any paintings you like!</h5>
+        <div style="text-align: center; font-size: 1em; margin-top: 20px;">
+            <h6>For prices, click below</h6>
+            <div style="display: flex; justify-content: center; margin-top: 20px;">
+                <a href="https://www.artsy.net/artist/keith-zenda" style="text-decoration: none; color: white; padding: 10px 20px; background-color: #333; border-radius: 5px;">KeithZendaArt on Artsy</a>
             </div>
         </div>
-            <p>Click the button below and navigate through your choices to make a payment.</p>
-            <!-- Online Payment Dropdown Section -->
+        <p>Click the button below and navigate through your choices to make a payment.</p>
+        <!-- Online Payment Dropdown Section -->
 <div style="margin-top: 40px; text-align: center;">
     <!-- Dropdown Button -->
     <button id="dropdownButton" style="background-color: #007BFF; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
