--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <div style="text-align: center; margin-top: 20px; font-family: 'Georgia', serif; font-size: 24px; color: #333; font-weight: bold;">
     <p>Welcome to Keith Zenda Art Portfolio</p>
 </div>
-<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='uploads/favicon.ico') }}">
+ <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <section class="preview-gallery" style="text-align: center; margin-top: 70px;">
     <div class="gallery" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px;">
 
